; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/unifdef/extr_unifdef.c_version.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/unifdef/extr_unifdef.c_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@copyright = common dso_local global i8* null, align 8
@stderr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @version() #0 {
  %1 = alloca i8*, align 8
  %2 = load i8*, i8** @copyright, align 8
  store i8* %2, i8** %1, align 8
  br label %3

3:                                                ; preds = %30, %0
  br label %4

4:                                                ; preds = %17, %3
  %5 = load i8*, i8** %1, align 8
  %6 = getelementptr inbounds i8, i8* %5, i32 1
  store i8* %6, i8** %1, align 8
  %7 = load i8, i8* %6, align 1
  %8 = sext i8 %7 to i32
  %9 = icmp ne i32 %8, 36
  br i1 %9, label %10, label %18

10:                                               ; preds = %4
  %11 = load i8*, i8** %1, align 8
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = call i32 @exit(i32 0) #3
  unreachable

17:                                               ; preds = %10
  br label %4

18:                                               ; preds = %4
  br label %19

19:                                               ; preds = %25, %18
  %20 = load i8*, i8** %1, align 8
  %21 = getelementptr inbounds i8, i8* %20, i32 1
  store i8* %21, i8** %1, align 8
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp ne i32 %23, 36
  br i1 %24, label %25, label %30

25:                                               ; preds = %19
  %26 = load i8*, i8** %1, align 8
  %27 = load i8, i8* %26, align 1
  %28 = load i32, i32* @stderr, align 4
  %29 = call i32 @putc(i8 signext %27, i32 %28)
  br label %19

30:                                               ; preds = %19
  %31 = load i32, i32* @stderr, align 4
  %32 = call i32 @putc(i8 signext 10, i32 %31)
  br label %3
}

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #1

declare dso_local i32 @putc(i8 signext, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
